added some more endpoints to test things out better
